tails of success

--- a/about/index.html
+++ b/about/index.html
@@ -31,6 +31,8 @@
 		<h2>Mission Statement</h2>
 		<p> Karma Rescue is a non-profit organization dedicated to saving animals in need by finding them permanent homes and providing the resources for successful companionship. Through education, we instill the critical need for spay/neuter and offer guidance to strengthen the animal-human bond. </p>
 
+		<p class="action"><a href="">Join Our Mailing List</a></p>
+
 		<h2>History</h2>
 		<p class="by">Rande Levine</p>
 		<p class="title">Founder of Karma Rescue</p>
@@ -40,18 +42,36 @@
 		<p>Rufus and I did everything together. We never left each other's sides. We walked, talked, sang, played, laughed, cried…you name it. Raising him on my own was one of the greatest experiences of my life. It humbled me and taught me to give unconditionally. Every morning when I looked into his sweet eyes, I thought of how many more wonderful animals like Rufus were out there. Having been involved in rescue for some time, I have seen it everyday. I walk into the shelters and see those same eyes that Rufus had. I see the longing and the love these animals have for us. I see how they can add so much to our lives. As we all know, not all animals have the chance to teach the world this message. So I founded Karma Rescue to try to give as many of them as possible the chance to help better our lives by just being in them. They deserve it.</p>
 
 		<h2>Tails of success</h2>
-		<ul>
-			<li>
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Roxy Before
-			</li>
-			<li>
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				After
-			</li>
-		</ul>
+		<section>
+			<ul>
+				<li>
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Gracie Before
+				</li>
+				<li>
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					After
+				</li>
+			</ul>
 
-		<p> fafaf </p>
+			<p> Gracie was rescued from the South Los Angeles shelter. She had what was called a "skin disease". This turned out to be no skin disease, and her face said it all. The veterinarian confirmed that acid had been thrown in Gracie's face. Dog fighting rings abuse dogs in this heinous way believing it will make them mean. As Gracie did not have a mean bone in her body, she was dumped at the shelter after suffering this abuse. Karma Rescue searched for that perfect home during Gracie's recovery period. With time, Gracie healed and she now lives with a wonderful adoptive family which is thankful for every moment they have with her. </p>
+		</section>
+
+			<section>
+			<ul>
+				<li>
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Ray Charles Before
+				</li>
+				<li>
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					After
+				</li>
+			</ul>
+
+			<p> Mr. Ray Charles, a three month old blue pit bull terrier mix, was rescued from the Carson shelter. Karma Rescue immediately took him to the Veterinarian to examine his obvious eye ailments. Ray was diagnosed with a condition called microphthalmia – a birth defect resulting in blindness. Even worse, Ray had glaucoma in one eye and it was unresponsive to treatment. This created pressure within the eye and caused severe migraines. It was recommended that Ray have the eye surgically removed.
+			Regardless of these medical issues, Ray will find his way into a loving, permanent home. What he lacks in eyesight he more than makes up for with a great nose, a great pair of ears and his incredible heart. </p>
+		</section>
 
 		<h2>Press</h2>
 		<ul class="headlines">
