--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/home.css" />
+	<link type="image/x-icon" rel="icon" href="karma-redesign/assets/images/favicon.png" />
 </head>
 <body>
 	<div class="container">
