--- a/home.html
+++ b/home.html
@@ -1,10 +1,13 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8"/>
-    <title>Karma Rescue</title>
+	<meta charset="utf-8" />
+	<title>Volunteer Details</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
+	<link type="image/x-icon" rel="icon" href="/karma-redesign/assets/images/favicon.png" />
 </head>
+<body>
 <body>
 
 	<!-- Main content to get straight to the point and and directly explain what the purpose of karma rescue is -->
