--- a/home.html
+++ b/home.html
@@ -55,20 +55,16 @@
 	    
 	    <!-- This is space for the header and main contain explaining the purpose of Karma Rescue -->
 	    <div class="main-content">
-	    	<h1>THIS IS A SPACE FOR YOUR HEADER</h1>
+	    	<h1>Give Love. Get Karma.</h1>
 	    	<div class="main-content-left">
-	    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis ultricies magna, ut faucibus purus ultrices et. Donec in 				molestie felis. Praesent id velit imperdiet, porta sem sed, pulvinar dolor. Nunc scelerisque ante at scelerisque fringilla. Proin 				pharetra enim ac felis convallis, ut faucibus elit vehicula. Maecenas mattis porttitor arcu id aliquet. Nunc sed sapien vitae 					dolor 			venenatis rhoncus. Morbi viverra erat at volutpat mollis. Nullam non diam nunc. In tempus lectus quis arcu 						consequat ullamcorper.	    		</p>
-	    	</div>
-	    	<div class="main-content-right">
-	    		<p>Integer dapibus nec urna at hendrerit. Suspendisse malesuada urna quis justo eleifend blandit. Quisque imperdiet, lacus id 					ullamcorper auctor, risus ligula blandit odio, vitae mattis nibh lorem quis urna. Class aptent taciti sociosqu ad litora torquent 				per 			conubia nostra, per inceptos himenaeos. In ante tellus, pellentesque euismod sodales vitae, interdum non diam. 					Morbi cursus dolor 				nunc, nec venenatis lectus convallis ac. Aenean euismod rhoncus leo, at tristique nisi suscipit 				eu. Sed urna arcu, aliquet at 					lorem 			id, ultrices accumsan risus. Curabitur vel nisl sit amet lorem 					varius imperdiet sit amet eget ligula.
-	
-		    	Proin arcu nulla, euismod quis ligula et, lobortis auctor odio. Pellentesque massa sapien, placerat eu nunc sit amet, vulputate 				malesuada risus. Cras nec hendrerit lacus. Phasellus pellentesque sapien nec ultrices malesuada. Nulla tempus tempus tellus. 					Pellentesque faucibus interdum nibh, in laoreet augue fermentum nec. Vestibulum ante ipsum primis in faucibus orci luctus et 					ultrices 			posuere cubilia Curae; Curabitur rutrum erat et porttitor mollis.</p>
-		    	</div>
+	    		<p>We believe all pets should be safe and loved. You can join us in our mission to save animals in need by checking out our fully vetted adoptable dogs, joining us at an adoption event, volunteering to be an advocate for dogs and dog education, or giving a donation to keep our programs running. 
+
+				Explore our site or give us a call to see why we were voted the best dog adoption organization by Los Angeles Magazine.</p>
 	    </div>
 	
 	    <!-- logos of the organizations -->
 	    <div class="organizations">
-	    	<h2>------------------Secondary Header -------------------</h2>
+	    	<h2>Thank You To Our Partners</h2>
 	    	
 	    	<img src="/karma-redesign/assets/images/nkla.jpg"/>
 	    	<img src="/karma-redesign/assets/images/nkla.jpg"/>
