--- a/donate/index.html
+++ b/donate/index.html
@@ -7,6 +7,7 @@
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
+	<link type="image/x-icon" rel="icon" href="/karma-redesign/assets/images/karma-favicon.png" />
 </head>
 <body>
 
