--- a/adopt/index.html
+++ b/adopt/index.html
@@ -133,9 +133,9 @@
 		<ul class="list">
 			<li>
 				<a href="">
-					<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
-					Biscuit 3 y.0. male mix
-					This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…
+					<img src="/karma-redesign/assets/images/adopt/chloe_real.jpg" width="200" height="200" alt="" />
+					<h2>Chloe 3 y.0. female mix</h2>
+					<p>This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
