--- a/adopt/index.html
+++ b/adopt/index.html
@@ -140,6 +140,74 @@
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
+
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/danny_real.jpg" width="200" height="200" alt="" />
+					<h2>Danny 3 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+		
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/dante_real.jpg" width="200" height="200" alt="" />
+					<h2>Dante 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+		
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/devi_final.jpg" width="200" height="200" alt="" />
+					<h2>Devi 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+	
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/nala_real.jpg" width="200" height="200" alt="" />
+					<h2>Nala 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/noah_real.jpg" width="200" height="200" alt="" />
+					<h2>Noah 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/roxy_real.jpg" width="200" height="200" alt="" />
+					<h2>Roxy 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+
+			<li>
+				<a href="">
+					<img src="/karma-redesign/assets/images/adopt/sadie1.jpg" width="200" height="200" alt="" />
+					<h2>Sadie 2 y.0. female mix</h2>
+					<p>DANNY TEXT</p>
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+
+
+
+
+
 		</ul>
 
 	</section>
