--- a/volunteer/details.html
+++ b/volunteer/details.html
@@ -5,7 +5,6 @@
 	<title>Volunteer Details</title>
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
-	<link type="image/x-icon" rel="icon" href="/karma-redesign/assets/images/karma-favicon.png" />
 </head>
 <body>
 
@@ -26,7 +25,10 @@
 
 		<h1>Karma Rescue Foster Program</h1>
 
-		<p id="foster-program-details">A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
+        <div id="foster-program">
+            <h1>Foster Program</h1>
+            <p id="foster-program-details">A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
+        </div>
 
 		<img id="details-video" src="/karma-redesign/assets/images/volunteer/example-a.jpg" width="200" height="200" alt="" />
 
