--- a/adopt/index.html
+++ b/adopt/index.html
@@ -144,8 +144,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/danny_real.jpg" width="200" height="200" alt="" />
-					<h2>Danny 3 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Danny 10 m.o. Maltese Mix</h2>
+					<p>I'm a little shy at first but once you get to know me I really come out of my shell.</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
@@ -153,8 +153,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/dante_real.jpg" width="200" height="200" alt="" />
-					<h2>Dante 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Dante 10 y.o. Retreiver Mix</h2>
+					<p>I'm a pretty big guy but 90% of me is pure love! The other 10% is my gorgeous looks.</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
