--- a/adopt/index.html
+++ b/adopt/index.html
@@ -162,8 +162,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/devi_final.jpg" width="200" height="200" alt="" />
-					<h2>Devi 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Devi 3 y.o. Boxer Mix</h2>
+					<p>I am a happy go lucky girl who is smart and so eager to please that I learned all my training without needing treats!</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
@@ -171,8 +171,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/nala_real.jpg" width="200" height="200" alt="" />
-					<h2>Nala 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Nala 4 y.o. Female Pitt</h2>
+					<p>I love activities such as going for a hike, car rides and trips to the beach. I have the best house manners and I am a pro at being trained!</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
@@ -180,8 +180,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/noah_real.jpg" width="200" height="200" alt="" />
-					<h2>Noah 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Noah 6 y.o. Pitt Bull</h2>
+					<p>I was rescued from the shelter by Karma Rescue because they could not pass up a big softie. I'm great on the leash and I make friends easily.</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
