Update master_default.html, set adopt index to use it, looks the same

--- a/adopt/index.html
+++ b/adopt/index.html
@@ -1,216 +1,185 @@
+---
+layout: master_default
+description: Karma Rescue Adopt - Search Results page
+---
 
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-	<meta charset="utf-8" />
-	<title>Sparky the Dog</title>
-	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
-	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
-	<link type="image/x-icon" rel="icon" href="/karma-redesign/assets/images/karma-favicon.png" />
-</head>
-<body>
-
-	<header class="header">
-		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
-		<nav>
+<section class="text">
+	<img src="/karma-redesign/assets/images/pets/sparky.jpg" alt="" />
+	<form class="adopt-search" action="" method="get">
+		<fieldset>
+			<legend>Good With</legend>
 			<ul>
-				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
-				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
-				<li><a href="/karma-redesign/donate/">Donate</a></li>
-				<li><a href="/karma-redesign/explore.html">Explore</a></li>
-				<li><a href="/karma-redesign/about/">About Us</a></li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Kids</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Cats</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Dogs</span>
+					</label>
+				</li>
 			</ul>
-		</nav>
-	</header>
+		</fieldset>
+		<fieldset>
+			<legend>Size</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Small</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Medium</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Large</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Extra Large</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<fieldset>
+			<legend>Gender</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Male</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Female</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<fieldset>
+			<legend>Size</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Puppy</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Young</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Large</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Extra Large</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<p>
+		<button type="submit">Go</button>
+		</p>
+	</form>
 
-	<section class="text">
+	<ul class="list">
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/chloe_real.jpg" width="200" height="200" alt="" />
+				<h2>Chloe 3 y.0. female mix</h2>
+				<p>This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 
-		<img src="/karma-redesign/assets/images/pets/sparky.jpg" alt="" />
-
-		<form class="adopt-search" action="" method="get">
-			<fieldset>
-				<legend>Good With</legend>
-				<ul>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Kids</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Cats</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Dogs</span>
-						</label>
-					</li>
-				</ul>
-			</fieldset>
-			<fieldset>
-				<legend>Size</legend>
-				<ul>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Small</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Medium</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Large</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Extra Large</span>
-						</label>
-					</li>
-				</ul>
-			</fieldset>
-			<fieldset>
-				<legend>Gender</legend>
-				<ul>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Male</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Female</span>
-						</label>
-					</li>
-				</ul>
-			</fieldset>
-			<fieldset>
-				<legend>Size</legend>
-				<ul>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Puppy</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Young</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Large</span>
-						</label>
-					</li>
-					<li>
-						<label>
-							<input type="checkbox" />
-							<span>Extra Large</span>
-						</label>
-					</li>
-				</ul>
-			</fieldset>
-			<p>
-			<button type="submit">Go</button>
-			</p>
-		</form>
-
-		<ul class="list">
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/chloe_real.jpg" width="200" height="200" alt="" />
-					<h2>Chloe 3 y.0. female mix</h2>
-					<p>This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
-
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/danny_real.jpg" width="200" height="200" alt="" />
-					<h2>Danny 3 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
-		
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/dante_real.jpg" width="200" height="200" alt="" />
-					<h2>Dante 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
-		
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/devi_final.jpg" width="200" height="200" alt="" />
-					<h2>Devi 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/danny_real.jpg" width="200" height="200" alt="" />
+				<h2>Danny 3 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 	
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/nala_real.jpg" width="200" height="200" alt="" />
-					<h2>Nala 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/dante_real.jpg" width="200" height="200" alt="" />
+				<h2>Dante 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+	
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/devi_final.jpg" width="200" height="200" alt="" />
+				<h2>Devi 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/noah_real.jpg" width="200" height="200" alt="" />
-					<h2>Noah 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/nala_real.jpg" width="200" height="200" alt="" />
+				<h2>Nala 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/roxy_real.jpg" width="200" height="200" alt="" />
-					<h2>Roxy 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/noah_real.jpg" width="200" height="200" alt="" />
+				<h2>Noah 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 
-			<li>
-				<a href="">
-					<img src="/karma-redesign/assets/images/pets/sadie1.jpg" width="200" height="200" alt="" />
-					<h2>Sadie 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
-				</a>
-				<form action="" method="post"><button>Save</button></form>
-			</li>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/roxy_real.jpg" width="200" height="200" alt="" />
+				<h2>Roxy 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
 
-
-
-
-
-		</ul>
-
-	</section>
-
-</body>
-</html>
+		<li>
+			<a href="">
+				<img src="/karma-redesign/assets/images/pets/sadie1.jpg" width="200" height="200" alt="" />
+				<h2>Sadie 2 y.0. female mix</h2>
+				<p>DANNY TEXT</p>
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+	</ul>
+</section>
