--- a/adopt/index.html
+++ b/adopt/index.html
@@ -135,8 +135,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/chloe_real.jpg" width="200" height="200" alt="" />
-					<h2>Chloe 3 y.0. female mix</h2>
-					<p>This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…</p>
+					<h2>Dylan 7 y.o. Pitt/Terrier</h2>
+					<p>This sweet hefty boy loves to be pet and pampered. And he LOVES swimming!</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
@@ -189,8 +189,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/roxy_real.jpg" width="200" height="200" alt="" />
-					<h2>Roxy 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Roxy 2 y.o. Pitt Bull</h2>
+					<p>Karma rescued me from a home where I was being neglected and I am SO happy to be getting a second chance at life.</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
@@ -198,8 +198,8 @@
 			<li>
 				<a href="">
 					<img src="/karma-redesign/assets/images/pets/sadie1.jpg" width="200" height="200" alt="" />
-					<h2>Sadie 2 y.0. female mix</h2>
-					<p>DANNY TEXT</p>
+					<h2>Sadie 3 m.o. Terrier Mix</h2>
+					<p>I am an absolute beauty and I know it! I'm a confident little girl who LOVES attention and just wants to be held all day!</p>
 				</a>
 				<form action="" method="post"><button>Save</button></form>
 			</li>
