Added links to some items

--- a/explore.html
+++ b/explore.html
@@ -26,7 +26,7 @@
 
 		<ul class="explore">
 			<li class="tangerine">
-				<a href="">
+				<a href="/karma-redesign/about/">
 					<img src="/karma-redesign/assets/images/explore/karma.jpg" width="300" height="300" alt="" /><br />
                     <span>Learn<br /><strong>Who We Are</strong>
                         <p class="img-description">
@@ -36,7 +36,7 @@
 				</a>
 			</li>
 			<li class="lime">
-				<a href="">
+				<a href="/karma-redesign/donate/">
 					<img src="/karma-redesign/assets/images/explore/cody.jpg" width="300" height="300" alt="" /><br />
                     <span>Support<br /><strong>10,000 Paws Project</strong>
                         <p class="img-description">
@@ -47,7 +47,7 @@
 				</a>
 			</li>
 			<li class="strawberry">
-				<a href="">
+				<a href="/karma-redesign/volunteer/">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
                     <span>Help<br /><strong>Be a Foster Parent</strong>
                         <p class="img-description">
@@ -58,7 +58,7 @@
 				</a>
 			</li>
 			<li class="lime">
-				<a href="">
+				<a href="/karma-redesign/donate/">
 					<img src="/karma-redesign/assets/images/explore/projectcoco.jpg" width="300" height="300" alt="" /><br />
                     <span>Support<br /><strong>Project Coco</strong>
                         <p class="img-description">
@@ -69,7 +69,7 @@
 				</a>
 			</li>
 			<li class="blueberry">
-				<a href="">
+				<a href="/karma-redesign/adopt/">
 					<img src="/karma-redesign/assets/images/explore/adopt.jpg" width="300" height="300" alt="" /><br />
                     <span>Adopt<br /><strong>Your New Best Friend</strong>
                         <p class="img-description">
@@ -79,7 +79,7 @@
 				</a>
 			</li>
 			<li class="strawberry">
-				<a href="">
+				<a href="/karma-redesign/volunteer/">
 					<img src="/karma-redesign/assets/images/explore/cody.jpg" width="300" height="300" alt="" /><br />
                     <span>Help<br /><strong>Be a Guardian Angel</strong>
                         <p class="img-description">
@@ -109,7 +109,7 @@
 				</a>
 			</li>
 			<li class="strawberry">
-				<a href="">
+				<a href="/karma-redesign/volunteer/">
 					<img src="/karma-redesign/assets/images/explore/adopt.jpg" width="300" height="300" alt="" /><br />
                     <span>Help <br /><strong>Find Forever Homes</strong>
                         <p class="img-description">
@@ -129,7 +129,7 @@
 				</a>
 			</li>
 			<li class="lime">
-				<a href="">
+				<a href="/karma-redesign/donate/">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
                     <span>Support<br /><strong>Sponsor a Dog, Save a Life</strong>
                         <p class="img-description">
