Add a footer to each page

--- a/about/index.html
+++ b/about/index.html
@@ -95,5 +95,21 @@
 
 	</section>
 
+	<footer class="footer">
+		<h2><img src="/karma-redesign/assets/images/karma-logo.jpg" alt="Karma Rescue" /></h2>
+		<ul class="primary">
+			<li><a href="/karma-redesign/adopt/">Adopt</a></li>
+			<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
+			<li><a href="/karma-redesign/donate/">Donate</a></li>
+			<li><a href="/karma-redesign/explore.html">Explore</a></li>
+		</ul>
+		<ul class="secondary">
+			<li><a href="">Sitemap</a></li>
+			<li><a href="">Terms and Conditions</a></li>
+			<li><a href="">Store</a></li>
+			<li><a href="">Lorem Ipsum</a></li>
+		</ul>
+	</footer>
+
 </body>
 </html>
