--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 	    <!-- Show a large image to display one of the rescues and have a little content for people to learn more. -->
 	    <div class="home-intro">
 			<img src="/karma-redesign/assets/images/karma_home_image.jpg" />
-			<p class="action"><a href="">Donate to Karma Rescue</a></p>
+			<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Karma Rescue</a></p>
 	    </div>
 
 	    <!-- Each item should contain information about each organization -->
