--- a/donate/details.html
+++ b/donate/details.html
@@ -26,9 +26,9 @@
 
 		<h1>10,000 Paws</h1>
 
-		<p>Our goal is to reach concerned donors who will commit to our "10,000 Paws Project" program in celebration of our 10th Anniversary, enabling Karma Rescue to secure its financial future. The program asks these dedicated donors to commit to a year of monthly donations at one of four levels – Silver, Gold, Platinum and Diamond.</p>
+		<p id="foster-program-details" >Our goal is to reach concerned donors who will commit to our "10,000 Paws Project" program in celebration of our 10th Anniversary, enabling Karma Rescue to secure its financial future. The program asks these dedicated donors to commit to a year of monthly donations at one of four levels – Silver, Gold, Platinum and Diamond.</p>
 
-		<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+		<img id="details-video" src="http://placehold.it/500x500" width="500" height="500" alt="" />
 
 		<h2>Detailed Info</h2>
 		<p>With the help of these dedicated "Paws" donors, Karma will be assured of the financial support needed to save at-risk dogs, whenever and wherever necessary, without putting a financial strain on its existing capital. These monthly funds will also be used to support our Education Program, Project Coco and much more. Karma is sure that the "10,000 Paws Project" program is one that all of our supporters can believe in and want to be a part of and our goal will be to register as many "10,000 Paws" supporters to the monthly program as possible.</p>
@@ -37,7 +37,7 @@
 
 		<h3>Testimonials</h3>
 		<blockquote>
-			<p>"We donate to give back to those in need. We feel a social responsibility to help others. We believe in Karma’s mission and as pit bull owners ourselves, we appreciate all they do for the breed. We wish we could save them all!!! We believe in community service and donating to important causes. It’s a regular part of our lives." - Mr. & Mrs. Winchester</p>
+			<p class="cite">"We donate to give back to those in need. We feel a social responsibility to help others. We believe in Karma’s mission and as pit bull owners ourselves, we appreciate all they do for the breed. We wish we could save them all!!! We believe in community service and donating to important causes. It’s a regular part of our lives." - Mr. & Mrs. Winchester</p>
 			<p class="cite">–John Doe</p>
 		</blockquote>
 
@@ -49,7 +49,18 @@
 
 		<h3>Related Information</h3>
 		<ul>
-			<li><a href="http://karmarescue.org/donation_central/10000_paws_recognition.htm">See the Wall of Paws: Our Current Donors and Donation Levels </a></li>
+			<p class="action"><a 
+                href="http://karmarescue.org/donation_central/10000_paws_recognition.htm">See
+                the Wall of Paws: Our Current Donors and Donation Levels
+            </a></p>
+            <finance>
+                <p class="action"><img
+                src="/karma-redesign/assets/images/donate/finance-logo.jpg"></img><a
+                    href="">Finance</a></p>
+            </finance>
+            <volunteer>
+            <p class="action"><img src="/karma-redesign/assets/images/donate/donate-play-logo.jpg"></img><a href="">Volunteer</a></p>
+            </volunteer>
 		</ul>
 
 	</section>
