updated donate details

--- a/donate/details.html
+++ b/donate/details.html
@@ -55,11 +55,10 @@
             </a></p>
             <finance>
                 <p class="action"><img
-                src="/karma-redesign/assets/images/donate/finance-logo.jpg"></img><a
-                    href="">Finance</a></p>
+                src="/karma-redesign/assets/images/donate/finance-logo.jpg"></img><a href="">Finance</a></p>
             </finance>
             <volunteer>
-            <p class="action"><img src="/karma-redesign/assets/images/donate/donate-play-logo.jpg"></img><a href="">Volunteer</a></p>
+                <p class="action"><img src="/karma-redesign/assets/images/donate/donate-play-logo.jpg"></img><a href="">Volunteer</a></p>
             </volunteer>
 		</ul>
 
