--- a/adopt/index.html
+++ b/adopt/index.html
@@ -206,7 +206,7 @@
 
 			<li>
 				<a href="">
-					<img src="/karma-redesign/assets/images/pets/selena_realjpg" width="200" height="200" alt="" />
+					<img src="/karma-redesign/assets/images/pets/selena_real.jpg" width="200" height="200" alt="" />
 					<h2>Selena 3 m.o. Terrier Mix</h2>
 					<p>I am a sweet little girl who is just learning how big the world really is! I'm a little more shy than my sister Sadie, but I'm just as sweet and cuddly.
 </p>
