--- a/about/index.html
+++ b/about/index.html
@@ -46,11 +46,11 @@
 		<section>
 			<ul>
 				<li>
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					<img src="/karma-redesign/assets/images/about/graciebefore.jpg" width="300" height="300" alt="" /><br />
 					Gracie Before
 				</li>
 				<li>
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					<img src="/karma-redesign/assets/images/about/gracieafter.jpg" width="300" height="300" alt="" /><br />
 					After
 				</li>
 			</ul>
@@ -61,11 +61,11 @@
 			<section>
 			<ul>
 				<li>
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					<img src="/karma-redesign/assets/images/about/raybefore.jpg" width="300" height="300" alt="" /><br />
 					Ray Charles Before
 				</li>
 				<li>
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					<img src="/karma-redesign/assets/images/about/rayafter.jpg" width="300" height="300" alt="" /><br />
 					After
 				</li>
 			</ul>
