--- a/home.html
+++ b/home.html
@@ -13,10 +13,8 @@
 	<div class="home">
 
 	    <!-- Show a large image to display one of the rescues and have a little content for people to learn more. -->
-
-	    <div class="home-intro">
-			<img src="/karma-redesign/assets/images/karma_home_image.jpg" />
-			<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Karma Rescue</a></p>
+	    <div class="intro">
+			<a href="/karma-redesign/about/"><img src="/karma-redesign/assets/images/home/intro-placeholder.png" alt="" /></a>
 	    </div>
 
 	    <div class="features">
@@ -56,6 +54,9 @@
 		    		<p>We believe all pets should be safe and loved. You can join us in our mission to save animals in need by checking out our fully vetted adoptable dogs, joining us at an adoption event, volunteering to be an advocate for dogs and dog education, or giving a donation to keep our programs running.</p>
 		    		<p>Explore our site or give us a call to see why we were voted the best dog adoption organization by Los Angeles Magazine.</p>
 		    	</div>
+
+		<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Karma Rescue</a></p>
+
 		    </div>
 
 		    <!-- logos of the organizations -->
