--- a/explore.html
+++ b/explore.html
@@ -36,7 +36,7 @@
 				</a>
 			</li>
 			<li class="lime">
-				<a href="/karma-redesign/donate/">
+				<a href="/karma-redesign/donate/details">
 					<img src="/karma-redesign/assets/images/explore/cody.jpg" width="300" height="300" alt="" /><br />
                     <span>Support<br /><strong>10,000 Paws Project</strong>
                         <p class="img-description">
@@ -47,7 +47,7 @@
 				</a>
 			</li>
 			<li class="strawberry">
-				<a href="/karma-redesign/volunteer/">
+				<a href="/karma-redesign/volunteer/details">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
                     <span>Help<br /><strong>Be a Foster Parent</strong>
                         <p class="img-description">
@@ -89,7 +89,7 @@
 				</a>
 			</li>
 			<li class="tangerine">
-				<a href="">
+				<a href="/karma-redesign/about/">
 					<img src="/karma-redesign/assets/images/explore/educate.jpg" width="300" height="300" alt="" /><br />
                     <span>Learn <br /><strong>How We Educate</strong>
                         <p class="img-description">
@@ -119,7 +119,7 @@
 				</a>
 			</li>
 			<li class="tangerine">
-				<a href="">
+				<a href="/karma-redesign/adopt/">
 					<img src="/karma-redesign/assets/images/explore/tailsofsuccess.jpg" width="300" height="300" alt="" /><br />
                     <span>Learn<br /><strong>Our Tails of Success</strong>
                         <p class="img-description">
@@ -139,7 +139,7 @@
 				</a>
 			</li>
 			<li class="tangerine">
-				<a href="">
+				<a href="/karma-redesign/about/">
 					<img src="/karma-redesign/assets/images/explore/events.jpg" width="300" height="300" alt="" /><br />
                     <span>Learn<br /><strong>Watch Our Videos</strong>
                         <p class="img-description">
