--- a/home.html
+++ b/home.html
@@ -53,9 +53,12 @@
 		    	<div class="main-content-left">
 		    		<p>We believe all pets should be safe and loved. You can join us in our mission to save animals in need by checking out our fully vetted adoptable dogs, joining us at an adoption event, volunteering to be an advocate for dogs and dog education, or giving a donation to keep our programs running.</p>
 		    		<p>Explore our site or give us a call to see why we were voted the best dog adoption organization by Los Angeles Magazine.</p>
+
+		    		<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Karma Rescue</a></p>
+		
 		    	</div>
 
-		<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Karma Rescue</a></p>
+				<iframe width="420" height="315" src="//www.youtube.com/embed/rc6VD2qPVsM" frameborder="0" allowfullscreen></iframe>
 
 		    </div>
 
