--- a/donate/index.html
+++ b/donate/index.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<section class="featured program">
-			<h2><a href="">Project Coco:</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Project Coco:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
 			<h3>Project Coco Support Pets through Basic Needs</h3>
@@ -44,7 +44,7 @@
 		</section>
 
 		<section class="featured program">
-			<h2><a href="">10,000 Paws:</a></h2>
+			<h2><a href="/karma-redesign/donate/details">10,000 Paws:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
 
 			<h3>Join the 10,000 Paws Army</h3>
