--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -33,7 +33,7 @@
 		</div>
 
 		<section class="featured program">
-			<h2><a href="">Guardian Angel</a></h2>
+			<h2><a href="/karma-redesign/volunteer/details">Guardian Angel</a></h2>
 			<img src="/karma-redesign/assets/images/volunteer/feature-a.jpg" alt="" />	
 			<h3>Be a Guardian Angel</h3>
 			<p>Not everyone is able to foster or adopt a dog, but anyone can become a guardian angel. Take Sparky for a walk, go on a hike and show our pups some love.</p>
@@ -42,7 +42,7 @@
 		</section>
 
 		<section class="featured program">
-			<h2><a href="">Foster</a></h2>
+			<h2><a href="/karma-redesign/volunteer/details">Foster</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
 			<h3>Be a Foster Parent</h3>
