--- a/donate/index.html
+++ b/donate/index.html
@@ -54,31 +54,31 @@
 		</section>
 
 		<section>
-			<h2><a href="">Sponsor a Dog, Save a Life</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Sponsor a Dog, Save a Life</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">Sid’s Spay/Neuter Program</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Sid’s Spay/Neuter Program</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">The Maxine Goldenson Foundation's Liping Animal Medical Fund</a></h2>
+			<h2><a href="/karma-redesign/donate/details">The Maxine Goldenson Foundation's Liping Animal Medical Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">Give to the Cody Fund</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Give to the Cody Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">Give to the Nova Fund</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Give to the Nova Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">Donate Supplies and Materials</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Donate Supplies and Materials</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">Support Pitbulls though the Amber Fund</a></h2>
+			<h2><a href="/karma-redesign/donate/details">Support Pitbulls though the Amber Fund</a></h2>
 		</section>
 
 	</section>
